infra/main.tf
terraform {
  required_version = ">= 1.12"
}

provider "aws" {
  region = var.aws_region
}


resource "aws_security_group" "ssh" {
  name        = "allow-ssh-and-web"
  description = "Allow SSH and Web inbound traffic"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "debian" {
  ami           = "ami-0c7217cdde317cfec"
  instance_type = var.instance_type

  # the key and security group are automatically generated when starting a lab
  key_name                    = var.key_name
  vpc_security_group_ids      = [aws_security_group.ssh.id]
  associate_public_ip_address = true

  tags = {
    Name = "team-the-merge-doctors-debian"
  }
}
